<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:animateLayoutChanges="true">

        <com.cn.core.ui.view.frosted.FrostedAnimatedGlowView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:minWidth="@dimen/dp280"
            android:maxWidth="@dimen/dp476"
            android:layout_height="@dimen/dp292"
            android:elevation="@dimen/dp10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:sgv_cornerRadius="@dimen/dp8"
            app:fagv_backgroundBlurOnly="true"
            app:fagv_blurEnabled="true"
            app:fagv_blurRadius="50"
            app:sgv_glowEnabled="false"
            app:asgv_refreshEffectEnabled="false"
            app:asgv_flowEnabled="false"
            app:sgv_strokeEnabled="true"
            app:sgv_strokeWidthNormal="@dimen/dp0point5"
            app:sgv_strokeColorNormal="@color/common_color_stroke_normal_step_a"
            app:sgv_topHighlightEnabled="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/dp17"
                android:includeFontPadding="false"
                android:text="@string/str_soft_list"
                android:textSize="@dimen/sp10"
                android:focusable="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/llSoftMng"
                app:layout_constraintBottom_toBottomOf="@id/llSoftMng"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/dp17"
                android:includeFontPadding="false"
                android:visibility="gone"
                android:text="@string/str_osd_soft_manager"
                android:textSize="@dimen/sp10"
                android:focusable="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/llSoftMng"
                app:layout_constraintBottom_toBottomOf="@id/llSoftMng"/>

            <com.cn.core.ui.view.frosted.StatefulGlowView
                android:id="@+id/llSoftMng"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp16"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp15"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp3"
                android:paddingEnd="@dimen/dp3"
                android:focusable="true"
                app:sgv_cornerRadius="@dimen/dp4"
                app:sgv_strokeEnabled="true"
                app:sgv_strokeWidthFocused="@dimen/dp1"
                android:onClick="@{v -> click.onEditType(v)}"
                app:sgv_strokeColorFocused="@color/common_color_stroke_focused"
                app:sgv_glowEnabled="true"
                app:sgv_topHighlightColor="@color/common_color_top_light_normal_step_a"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivSoftMng"
                    android:layout_width="@dimen/dp10"
                    android:layout_height="@dimen/dp10"
                    android:focusable="false"
                    android:duplicateParentState="true"
                    android:scaleType="centerInside"
                    android:layout_marginEnd="@dimen/dp2point5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvAppsRight"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAppsRight"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp16"
                    android:gravity="center_vertical"
                    android:focusable="false"
                    android:duplicateParentState="true"
                    android:text="@string/str_osd_soft_manager"
                    android:textSize="@dimen/sp7"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/ivSoftMng"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp16"
                    android:gravity="center_vertical"
                    android:focusable="false"
                    android:duplicateParentState="true"
                    android:visibility="gone"
                    android:text="@string/str_finish"
                    android:textSize="@dimen/sp7"
                    android:textColor="@color/light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </com.cn.core.ui.view.frosted.StatefulGlowView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainSoftList"
                android:layout_width="@dimen/dp213"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingTop="@dimen/dp9"
                android:paddingBottom="@dimen/dp9"
                android:paddingStart="@dimen/dp17"
                android:paddingEnd="@dimen/dp12"
                android:layout_marginEnd="@dimen/dp263"
                android:overScrollMode="never"
                android:focusable="false"
                tools:itemCount="6"
                tools:listitem="@layout/item_app"
                app:spanCount="3"
                android:clipChildren="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llSoftMng"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/softList"
                android:layout_width="@dimen/dp284"
                android:layout_height="@dimen/dp256"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:paddingStart="@dimen/dp16"
                android:paddingEnd="@dimen/dp16"
                android:scrollbars="vertical"
                android:scrollbarSize="@dimen/dp2"
                android:scrollbarStyle="insideInset"
                android:scrollbarTrackVertical="@color/transparent"
                android:overScrollMode="never"
                android:focusable="false"
                android:clipChildren="false"
                android:clipToPadding="false"
                tools:itemCount="16"
                tools:listitem="@layout/item_soft"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                app:layout_constraintTop_toBottomOf="@id/llSoftMng"
                app:layout_constraintEnd_toEndOf="parent"/>
            <!--
                android:paddingTop="@dimen/dp9"
                android:paddingBottom="@dimen/dp10"
                android:paddingStart="@dimen/dp17"
                android:paddingEnd="@dimen/dp15"-->

        </com.cn.core.ui.view.frosted.FrostedAnimatedGlowView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="click"
            type="com.cn.board.home.frag.soft.SoftFrag.ProxyClick" />
    </data>

</layout>