<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:animateLayoutChanges="true">

        <com.cn.core.ui.view.frosted.FrostedAnimatedGlowView
            android:id="@+id/main_activity_frag_app_manager_constraintLayout"
            android:layout_width="wrap_content"
            android:minWidth="@dimen/dp280"
            android:maxWidth="@dimen/dp476"
            android:layout_height="@dimen/dp292"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:sgv_cornerRadius="@dimen/dp8"
            app:fagv_backgroundBlurOnly="true"
            app:fagv_blurEnabled="true"
            app:fagv_blurRadius="50"
            app:sgv_glowEnabled="false"
            app:asgv_refreshEffectEnabled="false"
            app:asgv_flowEnabled="false"
            app:sgv_strokeEnabled="true"
            app:sgv_strokeWidthNormal="@dimen/dp0point5"
            app:sgv_strokeColorNormal="@color/common_color_stroke_normal_step_a"
            app:sgv_topHighlightEnabled="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- 视频作为首子 View：BELOW_WINDOW（窗口内容之下），关闭卡片模糊后透出，
                 标题/列表等窗口内容绘制在其上。层级由 SurfaceControlZOrder.sendBelowWindow 设置 -->
            <com.cn.board.meet.home.HomeVideoSurfaceView
                android:id="@+id/home_video_surface_view"
                android:layout_width="@dimen/dp200"
                android:layout_height="@dimen/dp200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/main_activity_frag_app_manager_app_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/dp17"
                android:includeFontPadding="false"
                android:text="@string/str_soft_list"
                android:textSize="@dimen/sp10"
                android:focusable="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/main_activity_frag_app_manager_layout"
                app:layout_constraintBottom_toBottomOf="@id/main_activity_frag_app_manager_layout"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/main_activity_frag_app_manager_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/dp17"
                android:includeFontPadding="false"
                android:visibility="gone"
                android:text="@string/str_osd_soft_manager"
                android:textSize="@dimen/sp10"
                android:focusable="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/main_activity_frag_app_manager_layout"
                app:layout_constraintBottom_toBottomOf="@id/main_activity_frag_app_manager_layout"/>

            <com.cn.core.ui.view.frosted.StatefulGlowView
                android:id="@+id/main_activity_frag_app_manager_layout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp16"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp15"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp3"
                android:paddingEnd="@dimen/dp3"
                android:focusable="true"
                android:onClick="@{v -> click.manager(v)}"
                app:sgv_cornerRadius="@dimen/dp4"
                app:sgv_strokeEnabled="true"
                app:sgv_strokeWidthFocused="@dimen/dp1"
                app:sgv_strokeColorFocused="@color/common_color_stroke_focused"
                app:sgv_glowEnabled="false"
                app:sgv_topHighlightColor="@color/common_color_top_light_normal_step_a"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/main_activity_frag_app_manager_right"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp16"
                    android:gravity="center_vertical"
                    android:focusable="false"
                    android:duplicateParentState="true"
                    android:text="@string/str_osd_soft_manager"
                    android:textSize="@dimen/sp7"
                    android:textColor="@color/selector_text_step_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/main_activity_frag_app_manager_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp16"
                    android:gravity="center_vertical"
                    android:focusable="false"
                    android:duplicateParentState="true"
                    android:visibility="gone"
                    android:text="@string/str_finish"
                    android:textSize="@dimen/sp7"
                    android:textColor="@color/selector_x1e94da_focus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </com.cn.core.ui.view.frosted.StatefulGlowView>

            <com.cn.board.meet.home.app.AppAggregatorMainListLayout
                android:id="@+id/main_activity_frag_app_manager_edit_list_layout"
                android:layout_width="@dimen/dp213"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp9"
                android:paddingBottom="@dimen/dp9"
                android:paddingStart="@dimen/dp17"
                android:paddingEnd="@dimen/dp12"
                android:layout_marginEnd="@dimen/dp263"
                android:overScrollMode="never"
                android:focusable="false"
                tools:itemCount="6"
                app:spanCount="3"
                android:clipChildren="false"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_activity_frag_app_manager_layout"/>

            <com.cn.board.meet.home.app.AppAggregatorListLayout
                android:id="@+id/main_activity_frag_app_manager_list_layout"
                android:layout_width="@dimen/dp284"
                android:layout_height="@dimen/dp256"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:paddingStart="@dimen/dp16"
                android:paddingEnd="@dimen/dp16"
                android:scrollbars="vertical"
                android:scrollbarSize="@dimen/dp2"
                android:scrollbarStyle="insideInset"
                android:scrollbarTrackVertical="@color/transparent"
                android:overScrollMode="never"
                android:focusable="false"
                android:clipChildren="false"
                android:clipToPadding="false"
                tools:itemCount="16"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                app:layout_constraintTop_toBottomOf="@id/main_activity_frag_app_manager_layout"
                app:layout_constraintEnd_toEndOf="parent"/>

        </com.cn.core.ui.view.frosted.FrostedAnimatedGlowView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <data>
        <variable
            name="click"
            type="com.cn.board.meet.home.app.AppAggregatorFrag.AAppAggregatorFragClick" />
    </data>

</layout>