<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="false"
            android:id="@+id/clRoot">

                <com.cn.core.ui.view.frosted.FrostedAnimatedGlowView
                    android:id="@+id/module_home_activity_home_frag_left"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp116"
                    android:minWidth="@dimen/dp414"
                    android:elevation="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp4"
                    android:clipChildren="false"
                    android:focusable="false"
                    app:sgv_cornerRadius="@dimen/dp8"
                    app:fagv_backgroundBlurOnly="true"
                    app:fagv_blurEnabled="true"
                    app:fagv_blurRadius="45"
                    app:sgv_overlayEnabled="true"
                    app:sgv_overlayColorNormal="@color/common_color_solid_normal"
                    app:sgv_glowDrawableNormal="@drawable/icon_frost_osd_main"
                    app:sgv_strokeEnabled="true"
                    app:sgv_strokeWidthNormal="@dimen/dp0point5"
                    app:sgv_strokeColorNormal="@color/common_color_stroke_normal_step_a"
                    app:sgv_glowEnabled="true"
                    app:sgv_glowRadiusNormal="@dimen/dp5"
                    app:sgv_glowColorNormal="@color/common_color_glow_normal"
                    app:asgv_flowEnabled="false"
                    app:sgv_topHighlightEnabled="true"
                    app:sgv_topHighlightColor="@color/common_color_top_light_normal_step_a"
                    app:layout_constraintVertical_bias="0.47"
                    app:layout_constraintWidth_percent="0.433333333333"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <TextClock
                    android:id="@+id/tc_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp34"
                    android:layout_marginEnd="@dimen/dp7"
                    android:padding="@dimen/dp0"
                    android:gravity="center"
                    android:format12Hour="@string/clock_format_24hours"
                    android:format24Hour="@string/clock_format_24hours"
                    android:fontFamily="sans-serif-thin"
                    android:text="9:46"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp40"
                    android:focusable="false"
                    app:layout_constraintEnd_toStartOf="@id/tc_date"
                    app:layout_constraintTop_toTopOf="@id/module_home_activity_home_frag_left"/>
                <TextClock
                    android:id="@+id/tc_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp48"
                    android:format12Hour="@string/clock_format_date_no_year"
                    android:format24Hour="@string/clock_format_date_no_year"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp7"
                    android:focusable="false"
                    app:layout_constraintStart_toStartOf="@id/tc_week"
                    app:layout_constraintTop_toTopOf="@id/module_home_activity_home_frag_left"/>
                <TextClock
                    android:id="@+id/tc_week"
                    android:layout_width="wrap_content"
                    android:minWidth="@dimen/dp30"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp12"
                    android:layout_marginTop="@dimen/dp65"
                    android:includeFontPadding="false"
                    android:format12Hour="@string/clock_format_week"
                    android:format24Hour="@string/clock_format_week"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp7"
                    android:typeface="sans"
                    android:focusable="false"
                    app:layout_constraintEnd_toStartOf="@id/main_dividing_line"
                    app:layout_constraintTop_toTopOf="@id/module_home_activity_home_frag_left"/>
                <View
                    android:id="@+id/main_dividing_line"
                    android:layout_width="@dimen/dp0point5"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="@dimen/dp45"
                    android:layout_marginEnd="@dimen/dp2"
                    android:background="@color/black"
                    android:focusable="false"
                    app:layout_constraintEnd_toStartOf="@id/scheduleRecyclerView"
                    app:layout_constraintTop_toTopOf="@id/module_home_activity_home_frag_left"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/scheduleRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dp205"
                    android:maxWidth="@dimen/dp255"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toEndOf="@id/module_home_activity_home_frag_left"
                    app:layout_constraintTop_toTopOf="@id/main_dividing_line"
                    app:layout_constraintBottom_toBottomOf="@id/main_dividing_line"/>
                <TextView
                    android:id="@+id/tvScheduleList"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp10"
                    android:minWidth="@dimen/dp57"
                    android:layout_marginStart="@dimen/dp12"
                    android:layout_marginBottom="@dimen/dp22"
                    android:paddingStart="@dimen/dp5"
                    android:paddingEnd="@dimen/dp5"
                    android:focusable="true"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="xxxxxxxxx"
                    android:textSize="@dimen/sp6"
                    android:textColor="@color/white"
                    app:sgv_cornerRadius="@dimen/dp4"
                    app:sgv_strokeEnabled="true"
                    app:sgv_strokeWidthFocused="@dimen/dp0point5"
                    app:sgv_strokeColorFocused="@color/common_color_stroke_focused"
                    app:sgv_glowEnabled="true"
                    app:layout_constraintStart_toEndOf="@id/main_dividing_line"
                    app:layout_constraintBottom_toBottomOf="@id/module_home_activity_home_frag_left"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp114"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginStart="@dimen/dp2"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:focusable="false"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintWidth_max="@dimen/dp184"
                    app:layout_constraintStart_toEndOf="@id/module_home_activity_home_frag_left"
                    app:layout_constraintTop_toTopOf="@id/module_home_activity_home_frag_left"
                    app:layout_constraintBottom_toBottomOf="@id/module_home_activity_home_frag_left"/>
                <ImageView
                    android:id="@+id/ivWakeUp"
                    android:layout_width="@dimen/dp14"
                    android:layout_height="@dimen/dp14"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp8"
                    android:layout_marginBottom="@dimen/dp20"
                    android:scaleType="centerInside"
                    android:focusable="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                    android:id="@+id/tvWakeUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:layout_marginStart="@dimen/dp8"
                    android:gravity="center"
                    android:focusable="false"
                    app:layout_constraintStart_toEndOf="@id/ivWakeUp"
                    app:layout_constraintTop_toTopOf="@id/ivWakeUp"
                    app:layout_constraintBottom_toBottomOf="@id/ivWakeUp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


